fixed headings color in dark mode

--- a/style/index.css
+++ b/style/index.css
@@ -204,6 +204,9 @@ body.dark-mode nav {
   background-color: #1e1e1e;
 }
 
+body.dark-mode h1, body.dark-mode h2, body.dark-mode h3 {
+  color: #62666b;
+}
 body.dark-mode nav ul li a {
   color: #e0e0e0;
 }
